# planet

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.dvc/: config
configs/: config.yml  test_config.yml
deploy/ansible/: inventory.ini
deploy/ansible/templates/: clean.sh  run.sh
src/: consts.py
src/containers/: containers.py
src/routes/: planet.py
src/services/: classifier.py  preprocess_utils.py
tests/: conftest.py
tests/integration/: test_endpoints.py
tests/unit/: test_classifier.py  test_config.py
weights/: pvtv2.onnx.dvc
