[tool.poetry]
name = "planet-service"
version = "0.1.0"
description = ""
authors = ["qamaz <soldatov@dl-ml.ru>"]
readme = "README.md"
packages = [{include = "planet_service"}]

[tool.poetry.dependencies]
python = "^3.9"
dependency-injector = "4.40.0"
fastapi = "0.88.0"
numpy = "1.23.3"
omegaconf = "2.2.3"
opencv-python = "4.6.0.66"
httpx = "0.23.1"
python-multipart = "0.0.5"
pygit2 = "1.10.1"
dvc-ssh = "^2.20.0"
onnxruntime = "^1.13.1"
pytest = "^7.2.0"
uvicorn = "^0.20.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
